--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 dj-database-url==0.5.0
 Django==4.2
 django-allauth==0.54.0
+django-crispy-forms==1.14.0
 gunicorn==23.0.0
 oauthlib==3.2.2
 pillow==10.4.0
