--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 dj-database-url==0.5.0
 Django==4.2
 django-allauth==0.54.0
+django-countries==7.2.1
 django-crispy-forms==1.14.0
 gunicorn==23.0.0
 oauthlib==3.2.2
@@ -12,3 +13,4 @@ python3-openid==3.2.0
 pytz==2024.1
 requests-oauthlib==2.0.0
 sqlparse==0.5.1
+stripe==10.12.0
