--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.8.1
+cloudinary==1.41.0
 dj-database-url==0.5.0
 Django==4.2
 django-allauth==0.54.0
+django-cloudinary-storage==0.3.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
 gunicorn==23.0.0
@@ -14,3 +16,4 @@ pytz==2024.1
 requests-oauthlib==2.0.0
 sqlparse==0.5.1
 stripe==10.12.0
+whitenoise==6.7.0
