--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-allauth==0.54.0
 django-cloudinary-storage==0.3.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
+django-summernote==0.8.20.0
 gunicorn==23.0.0
 oauthlib==3.2.2
 pillow==10.4.0
